# fmcomposer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
libraries/: CMakeLists.txt
libraries/Mus2Midi/: CMakeLists.txt  Mus2Midi.cc  Mus2Midi.h
libraries/simpleini/: CMakeLists.txt
resources/: readme.txt
resources/instruments/: defaultMelodic.fmci  defaultPercussion.fmci
resources/instruments/bass/: acousticbass.fmci  fingeredbass.fmci  hardsynthbass.fmci  pickedbass.fmci  slapbass.fmci  slapbass2.fmci  synthbass.fmci  synthbass2.fmci
resources/instruments/brass/: altosax.fmci  baritonesax.fmci  brass.fmci  horn.fmci  mutedtrumpet.fmci  sopranosax.fmci  tenorsax.fmci  trombone.fmci  trumpet.fmci  tuba.fmci
resources/instruments/effects/: belltree.fmci  birdie.fmci  graouwr.fmci  helicopter.fmci  helicopter2.fmci  scratch_pull.fmci  scratch_push.fmci  seashore.fmci  telephone.fmci  zapper.fmci
resources/instruments/guitar/: distguitar.fmci  guitarharmonics.fmci  jazzguitar.fmci  mutedguitar.fmci  nylonguitar.fmci  steelguitar.fmci
resources/instruments/keyboards/: clavi.fmci  drawbarorgan.fmci  elecpiano1.fmci  elecpiano2.fmci  harpsi.fmci  honkytonk.fmci  organ_flute.fmci  percorgan.fmci  piano.fmci  piano2.fmci  piano3.fmci  pipeorgan.fmci  rockorgan.fmci
resources/instruments/melodic percussion/: bell.fmci  celeste.fmci  dulcimer.fmci  glockenspiel.fmci  kalimba.fmci  marimba.fmci  melodictom.fmci  musicbox.fmci  space_marimba.fmci  steeldrum.fmci  timpani.fmci  vibraphone.fmci  xylophone.fmci
resources/instruments/percussion/: agogo_high.fmci  agogo_low.fmci  bassdrum.fmci  beep.fmci  castanets.fmci  clap.fmci  clave.fmci  closedhh.fmci  cowbell.fmci  crashcymbal.fmci  cymbalswell.fmci  elecbassdrum.fmci  elecsnare.fmci  hibongo.fmci  hiconga.fmci  highfloortom.fmci  highmidtom.fmci  hightimbale.fmci  hightom.fmci  highwoodblock.fmci  jinglebell.fmci  longguiro.fmci  longwhistle.fmci  lowbongo.fmci  lowconga.fmci  lowfloortom.fmci  lowmidtom.fmci  lowtimbale.fmci  lowtom.fmci  maracas.fmci  metronome_bell.fmci  metronome_click.fmci  muteconga.fmci  mutedsurdo.fmci  mutedtriangle.fmci  openhh.fmci  opentriangle.fmci  orchcymbal.fmci  pedalhh.fmci  ride.fmci  (+11 more)
resources/instruments/strings/: banjo.fmci  cello.fmci  harp.fmci  koto.fmci  orchhit.fmci  pizz.fmci  shamisen.fmci  sitar.fmci  slowstrings.fmci  strings.fmci  strings_attack.fmci  tremstrings.fmci  violin.fmci
resources/instruments/synth/: bowedpad.fmci  chiff.fmci  choirpad.fmci  crystal.fmci  fantasia.fmci  fifth_saw.fmci  halopad.fmci  icerain.fmci  metallicpad.fmci  myaaw.fmci  polysynth.fmci  pure_saw.fmci  pure_sine.fmci  pure_square.fmci  saw.fmci  softsynstrings.fmci  soundtrack.fmci  square.fmci  sweeppad.fmci  synbrass.fmci  synlead.fmci  synstrings.fmci  synvoice.fmci  warmpad.fmci
resources/instruments/woodwinds/: accordion.fmci  bagpipe.fmci  bassoon.fmci  bottleblow.fmci  breathy_flute.fmci  calliope.fmci  choir_aahs.fmci  choir_oohs.fmci  clarinet.fmci  englishhorn.fmci  flute.fmci  harmonica.fmci  oboe.fmci  ocarina.fmci  panflute.fmci  piccolo.fmci  recorder.fmci  shakuhachi.fmci  synthvoice.fmci  whistle.fmci
resources/songs/: AnotherThing.fmcs  pluiedefevrier.fmcs  sandtracking.fmcs
src/: fmcomposer.desktop  fmcomposer.rc  globalFunctions.cpp  globalFunctions.hpp  main.cpp  mudtracker.rc
src/fmengine/: README.md  fmlib.c  fmlib.h
src/gui/: channelHead.cpp  drawBatcher.cpp  gui.cpp  gui.hpp  sidebar.cpp
src/gui/list/: list.cpp
src/gui/operator/: operator.cpp
src/gui/popup/: popup.cpp  popup_build.cpp  popup_close.cpp
src/gui/slider/: dataslider.cpp
src/gui/textfield/: textfield.cpp
src/input/: input.cpp  noteInput.hpp
src/midi/: midi.h  midi_import.cpp
src/mtengine/: mtlib.c  mtlib.h
src/streamed/: streamedExport.cpp  streamedExport.h
src/views/general/: generalEditor.cpp
src/views/instrument/: instrEditor.cpp  instrEditor.hpp  instrEditor_fileActions.cpp
src/views/pattern/: songEditor.cpp  songEditor.hpp  songFileActions.cpp
src/views/pianoroll/: pianoRoll.cpp
src/views/settings/: configEditor.cpp
